utilities and add money js pushing

--- a/home.html
+++ b/home.html
@@ -77,5 +77,8 @@
 <script src="./js/home.js"></script>
 <script src="./js/cashOut.js"></script>
 <script src="./js/features.js"></script>
+<script src="./js/utilities.js"></script>
+<script src="./js/utilities2.js"></script>
+<script src="./js/addMoney.js"></script>
 </body>
 </html>
