--- a/home.html
+++ b/home.html
@@ -18,14 +18,16 @@
              <!-- available balance section -->
              <div class="bg-gray-100 p-4 rounded-lg shadow-md text-center mb-4">
                 <div id="balance" class="text-4xl font-bold">9400</div>
-                <div class="text-gray-500">Available Balance</div>
+                <div id="account-balance" class="text-gray-500">Available Balance</div>
              </div>
 
-             <!-- user action buttons -->
-             <div class="flex justify-between mb-4">
-                <button id="btn-show-add-money" class="btn w-1/2bg-gray-100 text-gray-700 hover:bg-gray-300">Add Money</button>
-                <button id="btn-show-cash-out" class="btn w-1/2 ml-2 bg-gray-100 text-gray-700 hover:bg-gray-300">Cash Out</button>
-             </div>
+         <!-- user action buttons -->
+<div class="flex justify-center mb-4 space-x-2">
+  <button id="btn-show-add-money" class="btn w-1/3 bg-gray-100 text-gray-700 hover:bg-gray-300">Add Money</button>
+  <button id="btn-show-cash-out" class="btn w-1/3 bg-gray-100 text-gray-700 hover:bg-gray-300">Cash Out</button>
+  <button id="btn-show-transaction" class="btn w-1/3 bg-gray-100 text-gray-700 hover:bg-gray-300">Transaction</button>
+</div>
+
 
              <!-- add money form start -->
              <div id="add-money-form" class=" bg-white p-6 rounded-lg shadow-lg">
@@ -69,6 +71,16 @@
                 </form>
               </div>
                <!-- cashout end  -->
+
+
+               <!-- Transaction start here  -->
+                <div id="transaction-section" class="hidden"> <h2 class="text-5xl text-center">Transaction History</h2>
+                <div id="transaction-container" class="text-center space-y-3">
+
+                </div>
+                
+                </div>
+               <!-- Transaction end here  -->
 
           </div>
         </div>
